[package]
name = "kittycord"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
poise = "0.6.1"
rand = "0.9.2"
regex = "1.12.2"
serde = "1.0.228"
serde_json = "1.0.145"
time = "0.3.44"
tokio = { version = "1.48.0", features = ["full"] }

[target.armv7-unknown-linux-gnueabihf]
linker = "arm-linux-gnueabihf-gcc"